# ceres

./: .dockerignore  Cargo.toml  Dockerfile  README.md  codefresh.yaml  docker-compose.yml  mkdocs.yml
.github/: pull_request_template.md
docs/: CONTRIBUTING.md  index.md
k8s/: deployment.yaml  migrations.yaml
migrations/00000000000001_setup_db_users/: down.sql  up.sql
migrations/2021-09-20-133547_create_flags_table/: down.sql  up.sql
src/: lib.rs  routes.rs
src/auth/: cerved_auth.rs  mod.rs
src/aws/: aws_s3.rs
src/database/: mod.rs  models.rs  schema.rs
src/errors/: mod.rs
src/kafka/: mod.rs
src/qrp/: cerved_qrp.rs  mod.rs  qrp_service.rs
tests/: test_http_server.rs
tests/mockoon/: cerved.json
