[package]
name = "ceres"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
actix-http = "3.8"
actix-rt = "2.10"
actix-service = "2"

[dependencies]
actix-web = "4.8"
anyhow = { version = "1.0", features = ["backtrace"] }
aws-config = "1.5"
aws-sdk-s3 = "1.42"
backon = "0.4"
base64 = "0.22"
chrono =  { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1 ", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
url = "2.5"
uuid = { version = "1.10", features = ["fast-rng", "v7", "serde"] }
thiserror = "1.0.63"

[[bin]]
name = "http_server"
path = "src/bin/http_server.rs"
